# OregonCore

./: CMakeLists.txt
cmake/: genrev.cmake  options.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindBinutils.cmake  FindMySQL.cmake  FindSysInfo.cmake
dep/: CMakeLists.txt
dep/SFMT/: CMakeLists.txt
dep/acelite/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
dep/zlib/win32/: zlib1.aps
src/: CMakeLists.txt
src/collision/: CMakeLists.txt  GameObjectModel.cpp  GameObjectModel.h
src/game/: CMakeLists.txt  CreatureTextMgr.cpp  Item.h  OutdoorPvP.cpp  Pet.h  ReputationMgr.h  ScriptLoader.cpp  SmartAI.cpp  SmartScript.cpp  SmartScriptMgr.cpp  Spell.cpp  UnitAI.cpp  World.h  WorldSession.h  gamePCH.h
src/oregoncore/: CMakeLists.txt  RASocket.cpp
src/oregoncore/RegressionTests/: Misc.cpp
src/oregonrealm/: CMakeLists.txt
src/scripts/: CMakeLists.txt
src/scripts/EasternKingdoms/Karazhan/: boss_nightbane.cpp  chess_event.cpp
src/scripts/EasternKingdoms/SunwellPlateau/: instance_sunwell_plateau.cpp
src/shared/: CMakeLists.txt  Common.h
src/shared/Auth/: Hmac.cpp  Hmac.h  SARC4.cpp
src/shared/Database/: Database.cpp  Database.h  DatabaseEnv.h  QueryResult.cpp
src/shared/Debugging/: UnixDebugger.cpp  WheatyExceptionReport.cpp
src/shared/GameSystem/: NGrid.h
src/shared/Utilities/: Callback.h  UnorderedMap.h  Util.cpp
src/tools/map_extractor/: CMakeLists.txt
src/tools/movements_extractor/: CMakeLists.txt
src/tools/vmap_assembler/: CMakeLists.txt
src/tools/vmap_extractor/: CMakeLists.txt  adtfile.cpp  vmapexport.cpp
